--- a/rickandmorty-api/src/components/character/character.css
+++ b/rickandmorty-api/src/components/character/character.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
-  padding: 3rem;
+  padding: 4.5rem;
   list-style: none;
 }
 .fondo2 {
@@ -10,6 +10,7 @@
 }
 .fondo {
   background-color: white;
+  position: relative;
 }
 .titulo {
   font-size: 7em;
@@ -20,22 +21,29 @@
 
 .encapsulador {
   display: flex;
+  justify-content: left;
   background-color: #3c3e44;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
-  padding-left: 0, 75rem;
 }
 
 .ch {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   font-size: 20px;
   color: white;
   font-family: sans-serif;
-  padding-left: 5%;
+  padding-left: 7px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
 }
 .name {
-  font-size: 30px;
+  font-size: 35px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
 }
 img {
   border-top-left-radius: 3%;
@@ -43,18 +51,45 @@ img {
 }
 
 .lkl {
-  font-size: 18px;
+  font-size: 20px;
   color: grey;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
 }
 .fs {
   color: grey;
 }
 .or {
-  font-size: 18px;
+  font-size: 20px;
+  margin-block-start: 8px;
+  margin-block-end: 0em;
 }
 .name:hover {
   color: #ffae17;
 }
 .or:hover {
   color: #ffae17;
+}
+body {
+  margin: 0%;
+}
+.interlineado1 {
+  margin-block-start: 20px;
+  margin-block-end: 0em;
+}
+.interlineado2 {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
+.interlineado3 {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
+.doa {
+  margin-block-start: 7px;
+  margin-block-end: 0em;
+}
+.svg {
+  position: absolute;
+  right: 10%;
 }
