--- a/rickandmorty-api/src/components/character/character.css
+++ b/rickandmorty-api/src/components/character/character.css
@@ -8,16 +8,7 @@
 .fondo2 {
   background-color: rgb(39, 43, 51);
 }
-.fondo {
-  background-color: white;
-  position: relative;
-}
-.titulo {
-  font-size: 7em;
-  font-family: sans-serif;
-  display: flex;
-  justify-content: center;
-}
+
 
 .encapsulador {
   display: flex;
@@ -89,7 +80,23 @@ body {
   margin-block-start: 7px;
   margin-block-end: 0em;
 }
-.svg {
-  position: absolute;
-  right: 10%;
+
+
+.titulo {
+  font-size: 7em;
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: 1; 
+  
 }
+.svg-header {
+  position: absolute;
+  z-index: -1;
+  left: 36%;
+  top: -12%;
+
+
+}
+
